--- a/src/public/sass/style.scss
+++ b/src/public/sass/style.scss
@@ -1279,43 +1279,11 @@
 /* Demo */
     
     #demo {
-//        background: #aaa;
         padding-bottom: 0;
+        height: 900px;
         
-        .device {
-            border: solid 40px #e8e8e8;
-            border-bottom: 0;
-            border-radius: 20px;
-            border-bottom-left-radius: 0;
-            border-bottom-right-radius: 0;
-            display: inline-block;
-            margin-bottom: 0;
-            position: relative;
-            vertical-align: middle;
+        iframe {
             width: 100%;
-            background: #fff;
-
-            &:after {
-                background: #ccc;
-                border-radius: 100%;
-                content: '';
-                height: 10px;
-                left: 50%;
-                margin: -23px 0 0 -5px;
-                position: absolute;
-                top: 0;
-                width: 10px;
-            }
-
-            &.fit {
-                display: block;
-                width: 100%;
-                height: 850px;
-
-                iframe {
-                    width: 100%;
-                    min-height: 100%;
-                }
-            }
+            min-height: 100%;
         }
     }
